<resources>
    <string name="app_name">ClearScore Demo</string>
    <string name="top_circle_text_value">Your credit score is</string>
    <string name="bottom_circle_default_value" />
    <string name="main_circle_default_value">-</string>
    <string name="credit_score_max_prefix">out of %1$s</string>
    <string name="credit_score_client_ref_prefix">Client Reference: %1$s</string>
    <string name="title_my_credit_report">My Credit Report</string>
    <string name="backbutton">backbutton</string>
    <string name="app_desc">App Demo by Ikageng IkyMasie</string>
    <string name="home_instructions">Tap your score to view more info...</string>

    <!-- transition names-->
    <string name="tr_top_text_circle" translatable="false">trTopC</string>
    <string name="tr_bottom_text_circle" translatable="false">trBottomC</string>
    <string name="tr_main_text_circle" translatable="false">trMainC</string>
    <string name="tr_circle" translatable="false">trCircleC</string>
    <string name="tr_circle_outline" translatable="false">trCircleOutlineC</string>
    <string name="tr_title" translatable="false">trTitle</string>
    <string name="tr_home" translatable="false">trHome</string>
    <string name="tr_instructions" translatable="false">trInstructions</string>
    <string name="tr_subtitle" translatable="false">trSubtitle</string>

</resources>